# genicons

./: Cargo.toml  README.md
src/: main.rs  manifest.rs
src/arguments/: mod.rs
