[package]
name = "genicons"
version = "0.1.2"
edition = "2024"
description = "A quick utility to generate favicons"
authors = ["OwOchlé"]
license = "MIT"
homepage = "https://github.com/OwOchle/genicons"
repository = "https://github.com/OwOchle/genicons"
readme = "README.md"

[dependencies]
arboard = { version = "3.6.1", default-features = false }
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
ico = "0.5.0"
photon-rs = "0.3.3"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
